[package]
name = "polebarn_f3"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.11"
panic-rtt-core = "0.1.1"
freertos-sys = {git="https://github.com/tstellanova/freertos-sys", features=["stm32f3x"]}
cty = "0.2.1"
stm32f3 = {version = "0.10.0", features = ["stm32f303"]}
stm32f3xx-hal = {version="0.4.3", features = ["rt", "stm32f303xc"] }
lazy_static = {version="1.4.0", features=["spin_no_std"] }

